--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,75 @@
+@-moz-viewport { width: device-width; scale: 1; }
+@-ms-viewport { width: device-width; scale: 1; }
+@-o-viewport { width: device-width; scale: 1; }
+@-webkit-viewport { width: device-width; scale: 1; }
+@viewport { width: device-width; scale: 1; };
 html {
   box-sizing: border-box;
+  font-family: sans-serif;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+}
+
+section {
+  background-color: #e2e2e2;
+  padding: 2rem 0;
+}
+
+.wrapper {
+  max-width: 50em;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+h1 {
+  margin: 0 0 1.3rem;
+}
+
+.content,
+.photo {
+  padding: 1rem;
+  width: 100%;
+}
+
+.img-flex {
+  display: block;
+    width: 100%;
+}
+
+a {
+  font-family: sans-serif;
+  color: #fff;
+  background-color: #555;
+  padding: 0.5em 0.75em;
+  border-radius: 4px;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a:hover {
+  background-color: #000;
+}
+
+@media only screen and (min-width: 25em) {
+  html {
+    font-size: 100%;
+    line-height: 1.3;
+  }
+}
+
+@media only screen and (min-width: 38em) {
+
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
 }
