--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,15 @@
 @-ms-viewport { width: device-width; scale: 1; }
 @-o-viewport { width: device-width; scale: 1; }
 @-webkit-viewport { width: device-width; scale: 1; }
-@viewport { width: device-width; scale: 1; };
+@viewport { width: device-width; scale: 1; }
+
 html {
   box-sizing: border-box;
-  font-family: sans-serif;
-  line-height: 1.5;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+  font: normal 100%/1.3 sans-serif;
 }
 
 *, *::before, *::after {
@@ -42,14 +46,14 @@ h1 {
 
 .img-flex {
   display: block;
-    width: 100%;
+  width: 100%;
 }
 
 a {
   font-family: sans-serif;
   color: #fff;
   background-color: #555;
-  padding: 0.5em 0.75em;
+  padding: .5em .75em;
   border-radius: 4px;
   text-decoration: none;
   display: inline-block;
@@ -60,10 +64,12 @@ a:hover {
 }
 
 @media only screen and (min-width: 25em) {
+
   html {
     font-size: 100%;
     line-height: 1.3;
   }
+
 }
 
 @media only screen and (min-width: 38em) {
@@ -72,4 +78,27 @@ a:hover {
     font-size: 110%;
     line-height: 1.4;
   }
+
+  .content,
+  .photo {
+    width: 50%;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  html {
+    font-size: 130%;
+  }
+
 }
